<?xml version="1.0"?>
<package>
  <name>trac_ik</name>
  <version>1.4.4</version>
  <description>
    The ROS packages in this repository were created to provide an improved
    alternative Inverse Kinematics solver to the popular inverse Jacobian
    methods in KDL.  TRAC-IK handles joint-limited chains better than KDL
    without increasing solve time.
  </description> 
  <maintainer email="pbeeson@traclabs.com">Patrick Beeson</maintainer>
  <author>Patrick Beeson</author>
  <author>Barrett Ames</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/trac_ik</url>
  <url type="repository">https://bitbucket.org/traclabs/trac_ik</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>trac_ik_examples</run_depend>
  <run_depend>trac_ik_kinematics_plugin</run_depend>
  <run_depend>trac_ik_lib</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
