<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_examples</name>
  <version>1.6.6</version>
  <description> This package contains the source code for testing and comparing trac_ik</description>
  <author>Patrick Beeson</author>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend condition="$ROS_DISTRO != noetic">orocos_kdl</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>pr2_description</exec_depend>

</package>
