<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>trac_ik_kinematics_plugin</name>
  <version>1.4.1</version>

  <description>A MoveIt! Kinematics plugin using TRAC-IK</description>

  <maintainer email="pbeeson@traclabs.com">Patrick Beeson</maintainer>
  <author>Patrick Beeson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/trac_ik_kinematics_description.xml"/>
  </export>

  <build_depend>trac_ik_lib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>


  <run_depend>trac_ik_lib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>

</package>
