<?xml version="1.0"?>
<package>
  <name>trac_ik_kinematics_plugin</name>
  <version>1.5.1</version>
  <description>A MoveIt! Kinematics plugin using TRAC-IK</description>
  <author>Patrick Beeson</author>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trac_ik_lib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/trac_ik_kinematics_description.xml"/>
  </export>
</package>
