<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_lib</name> 
  <version>1.6.4</version>
  <description>
    TRAC-IK is a faster, significantly more reliable drop-in replacement for
    KDL's pseudoinverse Jacobian solver.

    The TRAC-IK library has a very similar API to KDL's IK solver calls,
    except that the user passes a maximum time instead of a maximum number of
    search iterations.  Additionally, TRAC-IK allows for error tolerances to
    be set independently for each Cartesian dimension (x,y,z,roll,pitch.yaw).
  </description>
  <author>Patrick Beeson</author>
  <author>Barrett Ames</author>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>
</package>
