<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_lib</name>
  <version>1.6.6</version>
  <description>
    TRAC-IK is a faster, significantly more reliable drop-in replacement for
    KDL's pseudoinverse Jacobian solver.

    The TRAC-IK library has a very similar API to KDL's IK solver calls,
    except that the user passes a maximum time instead of a maximum number of
    search iterations.  Additionally, TRAC-IK allows for error tolerances to
    be set independently for each Cartesian dimension (x,y,z,roll,pitch.yaw).
  </description>
  <author>Patrick Beeson</author>
  <author>Barrett Ames</author>
  <maintainer email="aprotyas@u.rochester.edu">Abrar Rahman Protyasha</maintainer>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_export_depend>

  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>urdf</exec_depend>
</package>
