<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_python</name>
  <version>1.6.6</version>
  <description>The trac_ik_python package contains a python wrapper using SWIG
  for trac_ik_lib</description>
  <author>Sam Pfeiffer</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sam Pfeiffer</maintainer>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>
  <maintainer email="abrar.rahman98@gmail.com">Abrar Rahman Protyasha</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>libnlopt-cxx-dev</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>swig</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>libnlopt-cxx-dev</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>swig</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
</package>
