<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>trac_ik_python</name>
  <version>1.6.6</version>
  <description>The trac_ik_python package contains a python wrapper using SWIG
  for trac_ik_lib</description>
  <author>Sam Pfeiffer</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sam Pfeiffer</maintainer>
  <maintainer email="robotics@traclabs.com">TRACLabs Robotics</maintainer>
  <license>BSD</license>


  <build_depend>swig</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <build_depend>libnlopt-dev</build_depend>
  <build_depend>libnlopt-cxx-dev</build_depend>

  <exec_depend>swig</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
