<?xml version="1.0"?>
<package format="3">
  <name>trac_ik_python</name>
  <version>0.1.0</version>
  <description>The trac_ik_python package contains a python wrapper for trac_ik</description>
  <maintainer email="aprotyas@u.rochester.edu">Abrar Rahman Protyasha</maintainer>
  <author>Sam Pfeiffer</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>libnlopt-cxx-dev</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>libnlopt-cxx-dev</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rpyutils</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
